# training-materials

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SETUP.md
.github/workflows/: cpp-comprehensive-ci.yml  python-fastapi-ci.yml  python-fastapi-ci.yml.disabled  python-simple-ci.yml  typescript-comprehensive-ci.yml
demos/cpp-http-server/: .cppcheck  CMakeLists.txt  Dockerfile  README.md  STATIC-ANALYSIS-COMPLETE.md  cppcheck  cppcheck-info.md
demos/cpp-http-server/include/: health_check.h  http_server.h  json_utils.h  task_manager.h
demos/cpp-http-server/src/: health_check.cpp  http_server.cpp  json_utils.cpp  main.cpp  task_manager.cpp
demos/cpp-http-server/tests/: test_minimal.cpp  test_task_manager.cpp
demos/python-fastapi/: .gitignore  Dockerfile  README.md  container-structure-test.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt
demos/python-fastapi/app/: __init__.py  main.py
demos/python-fastapi/app/api/v1/: health.py  tasks.py
demos/python-fastapi/app/core/: config.py
demos/python-fastapi/app/models/: task.py
demos/python-fastapi/app/tests/: conftest.py  test_health.py  test_main.py  test_tasks.py
demos/typescript-api/: .env.example  .eslintrc.js  .gitignore  Dockerfile  README.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
demos/typescript-api/src/: app.ts
demos/typescript-api/src/controllers/: task-controller.ts
demos/typescript-api/src/middleware/: error-handler.ts  security.ts
demos/typescript-api/src/models/: task.ts
demos/typescript-api/src/utils/: health.ts
demos/typescript-api/tests/: complete-coverage.test.ts  health.test.ts  security.test.ts  setup.ts  task.test.ts
demos/typescript-api/tests/performance/: README.md
demos/typescript-api/tests/performance/dashboard/: performance-dashboard-live.html  performance-dashboard.html
demos/typescript-api/tests/performance/data/: dashboard-data.json  performance-baseline.json
demos/typescript-api/tests/performance/reports/: baseline-report.html  regression-report-1756485702563.html
demos/typescript-api/tests/performance/scenarios/: heavy-load.yml  light-load.yml  memory-test.yml  moderate-load.yml
demos/typescript-api/tests/performance/scripts/: baseline-recorder.js  dashboard-updater.js  memory-profiler.js  performance-processor.js  regression-detector.js
docs/: CI-REQUIREMENTS.md  git-branching-strategy.md  overview.md  pre-commit-setup.md
docs/proposals/: cpp-application.md  go-service.md  python-fastapi.md  typescript-node.md
scripts/: detect-secrets.sh  setup-repo.sh
templates/gitignore/: cpp.gitignore  go.gitignore  rust.gitignore  typescript-node.gitignore
